[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/Tilesets/Forest/BG.png" type="Texture" id=1]
[ext_resource path="res://assets/Tilesets/Forest/FullSet.png" type="Texture" id=2]
[ext_resource path="res://assets/Tilesets/Forest/Small FullSet.png" type="Texture" id=3]
[ext_resource path="res://src/Items/Collectable.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Items/Ruby.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/HUD.gd" type="Script" id=6]
[ext_resource path="res://assets/UI/slice_UI_00.png" type="Texture" id=7]
[ext_resource path="res://assets/Fonts/ComicCodeReg.otf" type="DynamicFontData" id=8]
[ext_resource path="res://src/UI/Pause.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Player.tscn" type="PackedScene" id=10]

[sub_resource type="TileSet" id=1]
0/name = "FullSet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 384, 128, 128 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0
1/name = "FullSet.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 384, 128, 128 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "FullSet.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 896, 448, 128, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [  ]
2/z_index = 0
3/name = "FullSet.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 384, 384, 128, 128 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [  ]
3/z_index = 0
4/name = "FullSet.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 256, 384, 128, 128 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 12.2917, 38.7407, 52.2223, 34.1111, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 21.9167, 40.4768, 46.8009, 39.8981, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=19]
9/name = "Small FullSet.png 9"
9/texture = ExtResource( 3 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "Small FullSet.png 10"
10/texture = ExtResource( 3 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 0, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "Small FullSet.png 11"
11/texture = ExtResource( 3 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 128, 0, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "Small FullSet.png 12"
12/texture = ExtResource( 3 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 128, 64, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
13/name = "Small FullSet.png 13"
13/texture = ExtResource( 3 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 64, 64, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
13/z_index = 0
14/name = "Small FullSet.png 14"
14/texture = ExtResource( 3 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 0, 64, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
14/z_index = 0
15/name = "Small FullSet.png 15"
15/texture = ExtResource( 3 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 0, 128, 64, 64 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
15/z_index = 0
16/name = "Small FullSet.png 16"
16/texture = ExtResource( 3 )
16/tex_offset = Vector2( 0, 0 )
16/modulate = Color( 1, 1, 1, 1 )
16/region = Rect2( 64, 128, 64, 64 )
16/tile_mode = 0
16/occluder_offset = Vector2( 0, 0 )
16/navigation_offset = Vector2( 0, 0 )
16/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
16/z_index = 0
17/name = "Small FullSet.png 17"
17/texture = ExtResource( 3 )
17/tex_offset = Vector2( 0, 0 )
17/modulate = Color( 1, 1, 1, 1 )
17/region = Rect2( 128, 128, 64, 64 )
17/tile_mode = 0
17/occluder_offset = Vector2( 0, 0 )
17/navigation_offset = Vector2( 0, 0 )
17/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
17/z_index = 0
18/name = "Small FullSet.png 18"
18/texture = ExtResource( 3 )
18/tex_offset = Vector2( 0, 0 )
18/modulate = Color( 1, 1, 1, 1 )
18/region = Rect2( 0, 192, 64, 64 )
18/tile_mode = 0
18/occluder_offset = Vector2( 0, 0 )
18/navigation_offset = Vector2( 0, 0 )
18/shapes = [  ]
18/z_index = 0
19/name = "Small FullSet.png 19"
19/texture = ExtResource( 3 )
19/tex_offset = Vector2( 0, 0 )
19/modulate = Color( 1, 1, 1, 1 )
19/region = Rect2( 64, 192, 64, 64 )
19/tile_mode = 0
19/occluder_offset = Vector2( 0, 0 )
19/navigation_offset = Vector2( 0, 0 )
19/shapes = [  ]
19/z_index = 0
20/name = "Small FullSet.png 20"
20/texture = ExtResource( 3 )
20/tex_offset = Vector2( 0, 0 )
20/modulate = Color( 1, 1, 1, 1 )
20/region = Rect2( 128, 192, 64, 64 )
20/tile_mode = 0
20/occluder_offset = Vector2( 0, 0 )
20/navigation_offset = Vector2( 0, 0 )
20/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
20/z_index = 0
21/name = "Small FullSet.png 21"
21/texture = ExtResource( 3 )
21/tex_offset = Vector2( 0, 0 )
21/modulate = Color( 1, 1, 1, 1 )
21/region = Rect2( 192, 192, 64, 64 )
21/tile_mode = 0
21/occluder_offset = Vector2( 0, 0 )
21/navigation_offset = Vector2( 0, 0 )
21/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
21/z_index = 0
22/name = "Small FullSet.png 22"
22/texture = ExtResource( 3 )
22/tex_offset = Vector2( 0, 0 )
22/modulate = Color( 1, 1, 1, 1 )
22/region = Rect2( 192, 0, 64, 64 )
22/tile_mode = 0
22/occluder_offset = Vector2( 0, 0 )
22/navigation_offset = Vector2( 0, 0 )
22/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
22/z_index = 0
23/name = "Small FullSet.png 23"
23/texture = ExtResource( 3 )
23/tex_offset = Vector2( 0, 0 )
23/modulate = Color( 1, 1, 1, 1 )
23/region = Rect2( 256, 0, 64, 64 )
23/tile_mode = 0
23/occluder_offset = Vector2( 0, 0 )
23/navigation_offset = Vector2( 0, 0 )
23/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
23/z_index = 0
24/name = "Small FullSet.png 24"
24/texture = ExtResource( 3 )
24/tex_offset = Vector2( 0, 0 )
24/modulate = Color( 1, 1, 1, 1 )
24/region = Rect2( 320, 0, 64, 64 )
24/tile_mode = 0
24/occluder_offset = Vector2( 0, 0 )
24/navigation_offset = Vector2( 0, 0 )
24/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
24/z_index = 0
25/name = "Small FullSet.png 25"
25/texture = ExtResource( 3 )
25/tex_offset = Vector2( 0, 0 )
25/modulate = Color( 1, 1, 1, 1 )
25/region = Rect2( 384, 0, 64, 64 )
25/tile_mode = 0
25/occluder_offset = Vector2( 0, 0 )
25/navigation_offset = Vector2( 0, 0 )
25/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
25/z_index = 0
26/name = "Small FullSet.png 26"
26/texture = ExtResource( 3 )
26/tex_offset = Vector2( 0, 0 )
26/modulate = Color( 1, 1, 1, 1 )
26/region = Rect2( 448, 0, 64, 64 )
26/tile_mode = 0
26/occluder_offset = Vector2( 0, 0 )
26/navigation_offset = Vector2( 0, 0 )
26/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": true,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
26/z_index = 0
27/name = "Small FullSet.png 27"
27/texture = ExtResource( 3 )
27/tex_offset = Vector2( 0, 0 )
27/modulate = Color( 1, 1, 1, 1 )
27/region = Rect2( 448, 192, 64, 64 )
27/tile_mode = 0
27/occluder_offset = Vector2( 0, 0 )
27/navigation_offset = Vector2( 0, 0 )
27/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
27/z_index = 0

[sub_resource type="DynamicFont" id=20]
size = 24
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[node name="Level" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.368627, 0.0705882, 0.729412, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7

[node name="BGTiles" type="TileMap" parent="Background"]
position = Vector2( 0, 96 )
cell_quadrant_size = 32
format = 1

[node name="Decorations" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 393218, 3, 0, 589816, 1, 0, 589817, 1, 0, 589818, 1, 0, 589819, 1, 0, 589820, 1, 0, 589821, 1, 0, 589822, 1, 0, 589823, 1, 0, 524288, 1, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 655352, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 720888, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 786424, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0 )

[node name="Platforms" type="TileMap" parent="."]
tile_set = SubResource( 19 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 393225, 26, 0, 458766, 26, 0, 524295, 27, 0, 589828, 23, 0, 589829, 24, 0, 589830, 24, 0, 589831, 25, 0, 655375, 26, 0, 786438, 26, 0, 851975, 21, 0, 851982, 21, 0, 851984, 27, 0, 851986, 20, 0, 852006, 21, 0, 852008, 27, 0, 917506, 9, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917511, 10, 0, 917512, 11, 0, 917517, 9, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 11, 0, 917539, 9, 0, 917540, 10, 0, 917541, 10, 0, 917542, 10, 0, 917543, 10, 0, 917544, 10, 0, 917545, 10, 0, 917546, 11, 0, 983042, 14, 0, 983043, 13, 0, 983044, 13, 0, 983045, 13, 0, 983046, 13, 0, 983047, 13, 0, 983048, 17, 0, 983053, 14, 0, 983054, 13, 0, 983055, 13, 0, 983056, 13, 0, 983057, 13, 0, 983058, 12, 0, 983075, 14, 0, 983076, 13, 0, 983077, 13, 0, 983078, 13, 0, 983079, 13, 0, 983080, 13, 0, 983081, 13, 0, 983082, 12, 0, 1048578, 14, 0, 1048579, 13, 0, 1048580, 13, 0, 1048581, 13, 0, 1048582, 13, 0, 1048583, 12, 0, 1048589, 14, 0, 1048590, 13, 0, 1048591, 13, 0, 1048592, 13, 0, 1048593, 13, 0, 1048594, 12, 0, 1048611, 14, 0, 1048612, 13, 0, 1048613, 13, 0, 1048614, 13, 0, 1048615, 13, 0, 1048616, 13, 0, 1048617, 13, 0, 1048618, 12, 0, 1114114, 14, 0, 1114115, 13, 0, 1114116, 13, 0, 1114117, 13, 0, 1114118, 13, 0, 1114119, 12, 0, 1114121, 20, 0, 1114122, 20, 0, 1114123, 20, 0, 1114125, 14, 0, 1114126, 13, 0, 1114127, 13, 0, 1114128, 13, 0, 1114129, 13, 0, 1114130, 12, 0, 1114132, 20, 0, 1114133, 20, 0, 1114134, 20, 0, 1114135, 20, 0, 1114136, 20, 0, 1114139, 20, 0, 1114140, 20, 0, 1114141, 20, 0, 1114142, 20, 0, 1114143, 20, 0, 1114144, 20, 0, 1114145, 20, 0, 1114147, 14, 0, 1114148, 13, 0, 1114149, 13, 0, 1114150, 13, 0, 1114151, 13, 0, 1114152, 13, 0, 1114153, 13, 0, 1114154, 12, 0, 1179650, 15, 0, 1179651, 16, 0, 1179652, 16, 0, 1179653, 16, 0, 1179654, 16, 0, 1179655, 17, 0, 1179661, 14, 0, 1179662, 13, 0, 1179663, 13, 0, 1179664, 13, 0, 1179665, 13, 0, 1179666, 12, 0, 1179683, 14, 0, 1179684, 13, 0, 1179685, 13, 0, 1179686, 13, 0, 1179687, 13, 0, 1179688, 13, 0, 1179689, 13, 0, 1179690, 12, 0, 1245197, 15, 0, 1245198, 16, 0, 1245199, 16, 0, 1245200, 16, 0, 1245201, 16, 0, 1245202, 17, 0, 1245219, 14, 0, 1245220, 13, 0, 1245221, 13, 0, 1245222, 13, 0, 1245223, 13, 0, 1245224, 13, 0, 1245225, 13, 0, 1245226, 12, 0, 1310755, 14, 0, 1310756, 13, 0, 1310757, 13, 0, 1310758, 13, 0, 1310759, 13, 0, 1310760, 13, 0, 1310761, 13, 0, 1310762, 12, 0, 1376291, 14, 0, 1376292, 13, 0, 1376293, 13, 0, 1376294, 13, 0, 1376295, 13, 0, 1376296, 13, 0, 1376297, 13, 0, 1376298, 12, 0, 1441827, 14, 0, 1441828, 13, 0, 1441829, 13, 0, 1441830, 13, 0, 1441831, 13, 0, 1441832, 13, 0, 1441833, 13, 0, 1441834, 12, 0, 1507363, 14, 0, 1507364, 13, 0, 1507365, 13, 0, 1507366, 13, 0, 1507367, 13, 0, 1507368, 13, 0, 1507369, 13, 0, 1507370, 12, 0, 1572899, 14, 0, 1572900, 13, 0, 1572901, 13, 0, 1572902, 13, 0, 1572903, 13, 0, 1572904, 13, 0, 1572905, 13, 0, 1572906, 12, 0, 1638435, 14, 0, 1638436, 13, 0, 1638437, 13, 0, 1638438, 13, 0, 1638439, 13, 0, 1638440, 13, 0, 1638441, 13, 0, 1638442, 12, 0, 1703971, 14, 0, 1703972, 13, 0, 1703973, 13, 0, 1703974, 13, 0, 1703975, 13, 0, 1703976, 13, 0, 1703977, 13, 0, 1703978, 12, 0, 1769507, 14, 0, 1769508, 13, 0, 1769509, 13, 0, 1769510, 13, 0, 1769511, 13, 0, 1769512, 13, 0, 1769513, 13, 0, 1769514, 12, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Props" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="Collectables" type="Node" parent="."]

[node name="Coin" parent="Collectables" instance=ExtResource( 4 )]
position = Vector2( 950, 770 )

[node name="Coin2" parent="Collectables" instance=ExtResource( 4 )]
position = Vector2( 1010, 550 )

[node name="Coin3" parent="Collectables" instance=ExtResource( 4 )]
position = Vector2( 1980, 960 )

[node name="Ruby" parent="Collectables" instance=ExtResource( 5 )]
position = Vector2( 790, 310 )

[node name="Ruby2" parent="Collectables" instance=ExtResource( 5 )]
position = Vector2( 700, 950 )

[node name="Ruby3" parent="Collectables" instance=ExtResource( 5 )]
position = Vector2( 1470, 950 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Score" type="NinePatchRect" parent="UI/HUD"]
margin_left = 6.0
margin_top = 6.0
margin_right = 392.0
margin_bottom = 94.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 22, 22 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Label" type="Label" parent="UI/HUD/Score"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 20 )
text = "0 / 0 Coins"
align = 1
valign = 1
autowrap = true

[node name="Pause" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0
script = ExtResource( 9 )

[node name="PauseBG" type="Panel" parent="UI/Pause"]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -160.0
margin_right = 160.0
margin_bottom = 160.0

[node name="Title" type="Label" parent="UI/Pause/PauseBG"]
anchor_right = 1.0
margin_bottom = 69.0
text = "Paused"
align = 1
valign = 1

[node name="Container" type="Container" parent="UI/Pause/PauseBG"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -251.0

[node name="Resume" type="Button" parent="UI/Pause/PauseBG/Container"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -125.5
margin_right = 160.0
margin_bottom = -75.5
text = "Resume"

[node name="Restart" type="Button" parent="UI/Pause/PauseBG/Container"]
anchor_right = 1.0
margin_top = 60.0
margin_bottom = 190.0
text = "Restart"

[node name="Exit" type="Button" parent="UI/Pause/PauseBG/Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -51.0
margin_right = 320.0
margin_bottom = -1.0
text = "Exit"

[node name="Quit" type="Popup" parent="UI/Pause"]
editor/display_folded = true
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -70.0
margin_right = 300.0
margin_bottom = 70.0
__meta__ = {
"_edit_group_": true
}

[node name="Base" type="ColorRect" parent="UI/Pause/Quit"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.588235, 0.654902, 1 )

[node name="TitleBar" type="ColorRect" parent="UI/Pause/Quit/Base"]
anchor_right = 1.0
margin_bottom = 50.0
color = Color( 0.180392, 0.180392, 0.180392, 1 )

[node name="Label" type="Label" parent="UI/Pause/Quit/Base/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Are you sure you want to leave the game?"
align = 1
valign = 1

[node name="OK" type="Button" parent="UI/Pause/Quit/Base"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -69.0
margin_right = 157.0
margin_bottom = -9.0
text = "Yes"

[node name="Cancel" type="Button" parent="UI/Pause/Quit/Base"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -430.0
margin_top = -69.0
margin_right = -10.0
margin_bottom = -9.0
text = "Nope!"

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 339.467, 518.082 )
speed = Vector2( 390, 1000 )
stomp_impulse = 900.0
[connection signal="pressed" from="UI/Pause/PauseBG/Container/Resume" to="UI/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="UI/Pause/PauseBG/Container/Restart" to="UI/Pause" method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Pause/PauseBG/Container/Exit" to="UI/Pause" method="_on_Exit_pressed"]
[connection signal="pressed" from="UI/Pause/Quit/Base/OK" to="UI/Pause" method="_on_OK_pressed"]
[connection signal="pressed" from="UI/Pause/Quit/Base/Cancel" to="UI/Pause" method="_on_Cancel_pressed"]
